@@ -6,7 +6,7 @@ use warnings;
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
 use Image::Random;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 9;
 use Test::NoWarnings;
 use Video::Pattern;
 
@@ -25,6 +25,46 @@ eval {
 };
 is($EVAL_ERROR, "Unknown parameter 'something'.\n",
 	'Bad \'something\' parameter.');
+clean();
+
+# Test.
+eval {
+	Video::Pattern->new(
+		'duration' => undef,
+	);
+};
+is($EVAL_ERROR, "Parameter 'duration' must be numeric value.\n",
+	"Parameter 'duration' must be numeric value.");
+clean();
+
+# Test.
+eval {
+	Video::Pattern->new(
+		'duration' => 'foo',
+	);
+};
+is($EVAL_ERROR, "Parameter 'duration' must be numeric value.\n",
+	"Parameter 'duration' must be numeric value.");
+clean();
+
+# Test.
+eval {
+	Video::Pattern->new(
+		'fps' => undef,
+	);
+};
+is($EVAL_ERROR, "Parameter 'fps' must be numeric value.\n",
+	"Parameter 'fps' must be numeric value.");
+clean();
+
+# Test.
+eval {
+	Video::Pattern->new(
+		'fps' => 'foo',
+	);
+};
+is($EVAL_ERROR, "Parameter 'fps' must be numeric value.\n",
+	"Parameter 'fps' must be numeric value.");
 clean();
 
 # Test.
